--- a/package.json
+++ b/package.json
@@ -2,20 +2,21 @@
   "name": "eloquent-javascript",
   "version": "0.0.1",
   "description": "Solutions to problems in Eloquent JavaScript.",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ccrazy88/eloquent-javascript.git"
-  },
+  "repository": "https://github.com/ccrazy88/eloquent-javascript.git",
   "author": "Chrisna Aing",
-  "bugs": {
-    "url": "https://github.com/ccrazy88/eloquent-javascript/issues"
+  "scripts": {
+    "precommit": "lint-staged"
   },
-  "homepage": "https://github.com/ccrazy88/eloquent-javascript#readme",
+  "lint-staged": {
+    "*.js": ["eslint --fix", "git add"]
+  },
   "devDependencies": {
-    "eslint": "^3.10.2",
-    "eslint-config-airbnb": "^13.0.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^2.2.3",
-    "eslint-plugin-react": "^6.7.1"
+    "eslint": "^4.8.0",
+    "eslint-config-prettier": "^2.6.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-prettier": "^2.3.1",
+    "husky": "^0.14.3",
+    "lint-staged": "^4.2.3",
+    "prettier": "^1.7.4"
   }
 }
