--- a/.eslintrc
+++ b/.eslintrc
@@ -1,25 +1,9 @@
 {
+  "extends": ["ccrazy88"],
   "env": {
-    "browser": true,
     "node": true
   },
-  "extends": ["eslint:recommended", "plugin:import/recommended", "prettier"],
-  "parserOptions": {
-    "ecmaVersion": 2017,
-    "sourceType": "module",
-    "ecmaFeatures": {
-      "experimentalObjectRestSpread": true,
-      "impliedStrict": true,
-      "jsx": true
-    }
-  },
-  "plugins": ["import", "prettier"],
   "rules": {
-    "import/unambiguous": "off",
-    "no-console": "off",
-    "prettier/prettier": "error",
-    "sort-imports": "error",
-    "sort-keys": "error",
-    "sort-vars": "error"
+    "no-console": "off"
   }
 }
