--- a/.eslintrc
+++ b/.eslintrc
@@ -4,6 +4,7 @@
     "node": true
   },
   "rules": {
-    "no-console": "off"
+    "no-console": "off",
+    "import/no-unused-modules": "off"
   }
 }
