--- a/package.json
+++ b/package.json
@@ -6,22 +6,23 @@
   "author": "Chrisna Aing",
   "license": "MIT",
   "scripts": {
-    "lint": "eslint .",
-    "precommit": "lint-staged"
+    "lint": "eslint ."
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "lint-staged": {
-    "*.js": [
-      "eslint --fix",
-      "git add"
-    ]
+    "*.js": "eslint --fix"
   },
   "devDependencies": {
-    "eslint": "^6.2.2",
-    "eslint-config-ccrazy88": "^2.0.1",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-prettier": "^3.1.0",
-    "husky": "^3.0.4",
-    "lint-staged": "^9.2.5",
-    "prettier": "^1.18.2"
+    "eslint": "^6.8.0",
+    "eslint-config-ccrazy88": "^2.1.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-prettier": "^3.1.2",
+    "husky": "^4.2.3",
+    "lint-staged": "^10.0.8",
+    "prettier": "^1.19.1"
   }
 }
