--- a/package.json
+++ b/package.json
@@ -6,23 +6,19 @@
   "author": "Chrisna Aing",
   "license": "MIT",
   "scripts": {
+    "prepare": "husky install",
     "lint": "eslint ."
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
   },
   "lint-staged": {
     "*.js": "eslint --fix"
   },
   "devDependencies": {
-    "eslint": "^7.5.0",
-    "eslint-config-ccrazy88": "^3.2.0",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "husky": "^4.2.5",
-    "lint-staged": "^10.2.11",
-    "prettier": "^2.0.5"
+    "eslint": "^7.26.0",
+    "eslint-config-ccrazy88": "^3.3.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prettier": "^3.4.0",
+    "husky": "^6.0.0",
+    "lint-staged": "^11.0.0",
+    "prettier": "^2.3.0"
   }
 }
