--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "*.js": "eslint --fix"
   },
   "devDependencies": {
-    "eslint": "^7.32.0",
-    "eslint-config-ccrazy88": "^3.3.1",
-    "eslint-plugin-import": "^2.24.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "husky": "^7.0.1",
-    "lint-staged": "^11.1.2",
-    "prettier": "^2.3.2"
+    "@typescript-eslint/parser": "^5.17.0",
+    "eslint": "^8.12.0",
+    "eslint-config-ccrazy88": "^7.0.2",
+    "eslint-import-resolver-typescript": "^2.7.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-prettier": "^4.0.0",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.3.7",
+    "prettier": "^2.6.2",
+    "typescript": "^4.6.3"
   }
 }
